--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
         
         <script>
             $(function() {
-                var approveSentinels = [ ':+1:', ':v:', ':metal:' ];
-                var rejectSentinels = [ ':-1:', ':poop:', ':facepunch:' ];
+                var approveSentinels = [ ':+1:', ':v:', ':metal:', '👍' ];
+                var rejectSentinels = [ ':-1:', ':poop:', ':facepunch:', '👎' ];
+                var ignoredSentinels = [ 'retry' ];
                 var buildSuccessSentinels = ['All is well', 'build succeeded', 'PASS'];
                 var buildFailureSentinels = ['build failed', 'FAIL'];
                 var daysOfWeek = ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa'];
@@ -266,7 +267,7 @@
                                     } else if (pull.user.login == comment.user.login) {
                                         approve_status = 'pending_review';
                                         approve_url = comment.html_url;
-                                    } else if (!hasSentinel(body, buildFailureSentinels) && !hasSentinel(body, buildSuccessSentinels)) {
+                                    } else if (!hasSentinel(body, buildFailureSentinels) && !hasSentinel(body, buildSuccessSentinels) && !hasSentinel(body, ignoredSentinels)) {
                                         approve_status = 'pending_changes';
                                         approve_url = comment.html_url;
                                     }
