Allow capitalized Retry to be the same as retry

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <script>
             $(function() {
                 var approveSentinels = [ ':+1:', ':v:', ':metal:', '👍' ];
-                var ignoredSentinels = [ 'retry' ];
+                var ignoredSentinels = [ 'retry', 'Retry' ];
                 var buildSuccessSentinels = ['All is well', 'build succeeded', 'PASS'];
                 var buildFailureSentinels = ['build failed', 'FAIL'];
                 var daysOfWeek = ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa'];
