Ignore retry, even if made by the requester

--- a/index.html
+++ b/index.html
@@ -257,15 +257,17 @@
                                         })
                                     };
 
-                                    if (hasSentinel(body, approveSentinels)) {
-                                        approve_status = 'approved';
-                                        approve_url = comment.html_url;
-                                    } else if (pull.user.login == comment.user.login) {
-                                        approve_status = 'pending_review';
-                                        approve_url = comment.html_url;
-                                    } else if (!hasSentinel(body, buildFailureSentinels) && !hasSentinel(body, buildSuccessSentinels) && !hasSentinel(body, ignoredSentinels)) {
-                                        approve_status = 'pending_changes';
-                                        approve_url = comment.html_url;
+                                    if (!hasSentinel(body, ignoredSentinels) {
+                                        if (hasSentinel(body, approveSentinels)) {
+                                            approve_status = 'approved';
+                                            approve_url = comment.html_url;
+                                        } else if (pull.user.login == comment.user.login) {
+                                            approve_status = 'pending_review';
+                                            approve_url = comment.html_url;
+                                        } else if (!hasSentinel(body, buildFailureSentinels) && !hasSentinel(body, buildSuccessSentinels))) {
+                                            approve_status = 'pending_changes';
+                                            approve_url = comment.html_url;
+                                        }
                                     }
                                     
                                     if (first_pass_day == '' && hasSentinel(body, buildSuccessSentinels)) {
