--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <title>Pull Request Dashboard</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/yeti/bootstrap.min.css"/>
-        <link rel="stylesheet" href="file:///Users/srx147/Developer/Source/PullRequestDashboard/Vendor/tablesorter/css/theme.bootstrap.css"/>
+        <link rel="stylesheet" href="Vendor/tablesorter/css/theme.bootstrap.css"/>
 
         <style>
             .tablesorter-bootstrap .tablesorter-header {
@@ -171,8 +171,8 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/async/1.22/async.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
-        <script src="file:///Users/srx147/Developer/Source/PullRequestDashboard/Vendor/tablesorter/js/jquery.tablesorter.js"></script>
-        <script src="file:///Users/srx147/Developer/Source/PullRequestDashboard/Vendor/tablesorter/js/jquery.tablesorter.widgets.js"></script>
+        <script src="Vendor/tablesorter/js/jquery.tablesorter.js"></script>
+        <script src="Vendor/tablesorter/js/jquery.tablesorter.widgets.js"></script>
 
         <script id="auth-not-signed-in-template" type="text/x-handlebars-template">
             <li><a href="#" class="auth-sign-in">Connect to GitHub</a></li>
