A couple of fixes I missed

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <div class="clearfix">
                 <div id="approve-legend" class="pull-left">
-                    <p class="text-muted">Make a comment on a pull request with <span class="mono">:+1:</span> to approve or <span class="mono">:-1:</span> to reject.</p>
+                    <p class="text-muted">Approve or request changes on a pull request to update the CR status.</p>
                 </div>
 
                 <div class="pull-right">
